Agregado scripts para medición y comparación de tiempos al inyectar una falla simple

--- a/fing-dummy-app-uvision.uvprojx
+++ b/fing-dummy-app-uvision.uvprojx
@@ -356,7 +356,7 @@
             <ClangAsOpt>1</ClangAsOpt>
             <VariousControls>
               <MiscControls></MiscControls>
-              <Define>USE_HAL_DRIVER</Define>
+              <Define></Define>
               <Undefine></Undefine>
               <IncludePath></IncludePath>
             </VariousControls>
