Scripts medición de tiempos mejorados y resultados de mediciones

--- a/Scripts/time_fault.ini
+++ b/Scripts/time_fault.ini
@@ -21,9 +21,6 @@ printf("Comienza time_fault.ini \n");
 BK *
 TK *
 
-// Define end of execution with breakpoint
-BS \\fing_dummy_app_uvision\main.c\71, 1
-
 // Set breakpoint to inject the fault
 BS \\fing_dummy_app_uvision\main.c\71, 1
 
@@ -33,10 +30,10 @@ G
 // Cambiar el valor en memoria a partir de la direccion 0x2000 0000
 E INT 0x20000004 = 0x24
 
-// Kill breakpoint 1
-//BK 1
+// Kill breakpoint
+BK *
 
-// Run to end of execution breakpoint
+// Run to end of execution
 G
 
 printf("Fin time_fault.ini\n");
