--- a/Scripts/time_ref_n.ini
+++ b/Scripts/time_ref_n.ini
@@ -15,25 +15,15 @@ FUNC void OpenLog()
 
 OpenLog();
 
-printf("Comienza time_fault.ini \n");
+printf("Comienza time_ref_n.ini \n");
 
 // Remove all existing breakpoints and tracepoints   
 BK *
 TK *
 
-// Define end of execution with breakpoint
-BS \\fing_dummy_app_uvision\main.c\71, 1002
-
-// Run to breakpoint to inyect fault
+// Run to end of execution 
 G
 
-// Kill breakpoint 1
-//BK 1
-
-// Run to end of execution breakpoint
-G
-
-printf("Fin time_fault.ini\n");
-BK *
+printf("Fin time_ref_n.ini \n");
 
 LOG OFF
