--- a/Scripts/time_fault_n.ini
+++ b/Scripts/time_fault_n.ini
@@ -15,17 +15,14 @@ FUNC void OpenLog()
 
 OpenLog();
 
-printf("Comienza time_fault.ini \n");
+printf("Comienza time_fault_n.ini \n");
 
 // Remove all existing breakpoints and tracepoints   
 BK *
 TK *
 
-// Define end of execution with breakpoint
-BS \\fing_dummy_app_uvision\main.c\71, 1002
-
 // Set breakpoint to inject the fault
-BS \\fing_dummy_app_uvision\main.c\71, 1000
+BS \\fing_dummy_app_uvision\main.c\71, 100
 
 // Run to breakpoint to inyect fault
 G
@@ -33,13 +30,11 @@ G
 // Cambiar el valor en memoria a partir de la direccion 0x2000 0000
 E INT 0x20000004 = 0x24
 
-// Kill breakpoint 1
-//BK 1
 
 // Run to end of execution breakpoint
 G
 
-printf("Fin time_fault.ini\n");
-BK *
+printf("Fin time_fault_n.ini\n");
 
+BK *
 LOG OFF
