--- a/Scripts/time_ref.ini
+++ b/Scripts/time_ref.ini
@@ -12,27 +12,17 @@ FUNC void OpenLog()
   //SLOG >>.\\Output_data\Test_results.log
 }
 
-
 OpenLog();
 
-printf("Comienza time_fault.ini \n");
+printf("Comienza time_ref.ini \n");
 
 // Remove all existing breakpoints and tracepoints   
 BK *
 TK *
 
-// Define end of execution with breakpoint
-BS \\fing_dummy_app_uvision\main.c\71, 1
-
-// Run to breakpoint to inyect fault
+// Run to end of execution
 G
 
-// Kill breakpoint 1
-//BK 1
-
-// Run to end of execution breakpoint
-G
-
-printf("Fin time_fault.ini\n");
+printf("Fin time_ref.ini\n");
 
 LOG OFF
