--- a/Scripts/time_fault_n.ini
+++ b/Scripts/time_fault_n.ini
@@ -7,7 +7,7 @@
 
 FUNC void OpenLog()
 {
-  exec ("LOG >>.\\Output_data\Test.log");
+  exec ("LOG >>.//Output_data/time_fault_n.log");
   // IRLOG >>.\\irlog.log
   //SLOG >>.\\Output_data\Test_results.log
 }
@@ -22,7 +22,7 @@ BK *
 TK *
 
 // Set breakpoint to inject the fault
-BS \\fing_dummy_app_uvision\main.c\71, 100
+BS \\fing_dummy_app_uvision\main.c\71, 1000
 
 // Run to breakpoint to inyect fault
 G
