--- a/Scripts/time_ref.ini
+++ b/Scripts/time_ref.ini
@@ -7,7 +7,7 @@
 
 FUNC void OpenLog()
 {
-  exec ("LOG >>.\\Output_data\Test.log");
+  exec ("LOG >>.//Output_data/time_ref.log");
   // IRLOG >>.\\irlog.log
   //SLOG >>.\\Output_data\Test_results.log
 }
