--- a/Scripts/time_ref_n.ini
+++ b/Scripts/time_ref_n.ini
@@ -7,7 +7,7 @@
 
 FUNC void OpenLog()
 {
-  exec ("LOG >>.\\Output_data\Test.log");
+  exec ("LOG >>.//Output_data/time_ref_n.log");
   // IRLOG >>.\\irlog.log
   //SLOG >>.\\Output_data\Test_results.log
 }
@@ -25,5 +25,7 @@ TK *
 G
 
 printf("Fin time_ref_n.ini \n");
+
+ER STAT Output_data/Trace_time_ref.csv
 
 LOG OFF
