--- a/debug.ini
+++ b/debug.ini
@@ -25,9 +25,19 @@ EnableTPIU();
 FUNC void OnResetExec(void)  {
   EnableTPIU();
 }
- 
-// ensure logging into file is turned off
+
+FUNC void OpenLog()
+{
+  exec ("LOG >>.//Output_data/time_fault.log");
+  // IRLOG >>.\\irlog.log
+  //SLOG >>.\\Output_data\Test_results.log
+}
+
+// Ensure logging into file is turned off
 LOG OFF
+
+// Automated fault injection
+INCLUDE fault_injection_automated.ini
 
 // Execute a delay to see the functionality
 //INCLUDE Scripts\start.ini
@@ -42,7 +52,7 @@ LOG OFF
 //INCLUDE Scripts\time_ref_n.ini
 
 // Execute standard + fault injection after n times
-INCLUDE Scripts\time_fault_n.ini
+//INCLUDE Scripts\time_fault_n.ini
 
 // Execute the tests
 //INCLUDE Scripts\Test.ini 
